# AlgServer

./: AlgServer.cpp  AlgServer.h  Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFS.cpp  BestFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MATRIX  MATRIX-RESULTS  Main.cpp  MatrixProblem.cpp  MatrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OA.cpp  OA.h  QA.cpp  QA.h  README.md  Searchable.h  Searcher.h  Server.cpp  Server.h  SockStreams.cpp  (+9 more)
